# Final_Projekt

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_data_check.ipynb
src/app/: cli.py  core.py
src/projekt.egg-info/: PKG-INFO  SOURCES.txt
