[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "final-projekt-bundesliga-elo"
version = "0.1.0"
description = "Elo-Rating und Formanalyse für Bundesliga-Teams (Saisons 2023/24 und 2024/25)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
]